--- a/src/Codeography/Codeography.csproj
+++ b/src/Codeography/Codeography.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageReference Include="NAudio" Version="2.1.0" />
 	</ItemGroup>
 
 </Project>
